--- a/SIMON_SAYS_MEMORY_GAME/design.css
+++ b/SIMON_SAYS_MEMORY_GAME/design.css
@@ -3,7 +3,7 @@
 
  
 
-#square{
+.square{
     
     height: 195px;
     width: 195px;
@@ -14,7 +14,16 @@
  bottom: 500px;
  border-radius: 10px;
  box-shadow: 5px 5px 100px 2px rgba(0,0,0,.8);
-}#square1{
+ transition: 0.30s;
+}
+.square:hover
+{
+    background-color: rgb(255, 51, 0);
+    transition: 0.30s;
+}
+
+
+.square1{
     
     height: 195px;
     width: 195px;
@@ -28,12 +37,20 @@
    border-width: 10px;
    border-radius: 10px;
    box-shadow: 5px 5px 100px 2px rgba(0,0,0,.8);
+   transition: 0.30s;
 }
-#square2{
+.square1:hover
+{
+    background-color: rgb(205, 202, 50);
+    transition: 0.30s;
+}
+
+
+.square2{
     
     height: 195px;
     width: 195px;
-    background-color: blueviolet;
+    background-color: rgb(174, 43, 226);
     position: absolute;
     right: 400px;
     left: 700px;
@@ -41,8 +58,14 @@
     border: 900px;
     border-radius: 10px;
     box-shadow: 5px 5px 100px 2px rgba(0,0,0,.8);
+    transition: 0.30s;
 }
-#square3{
+.square2:hover
+{
+    background-color: rgb(220, 43, 226);
+    transition: 0.30s;
+}
+.square3{
     
     height: 195px;
     width: 195px;
@@ -52,8 +75,14 @@
     left: 500px;
     bottom: 300px;
     border-radius: 10px;
-    box-shadow: 5px 5px 100px 2px rgba(0,0,0,.8);
+    box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
+    transition: 0.30s;
 
+}
+.square3:hover
+{
+    background-color: rgb(255, 105, 210);
+    transition: 0.30s;
 }
 body{
     display: block;
@@ -65,17 +94,25 @@ body{
     padding-right: 130px;
     background-color: black;
 }
-#simon{
+.simon{
     color: white;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 100px;
     text-align: center;
 margin-top: -15px;
 
-    
+
     
 }
-#button{
-
-
+.button{
+    position:absolute;
+    left: 650px;
+    bottom: 200px; 
+    height:40px ;
+    width: 90px;
+    border-radius: 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border-color: rgb(114, 3, 25);
+    background-color: white;
+color: black;
 }
